Fri Dec 30 16:37:49 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * tests/transport/simple_bp_rm/SimpleDataWriter.cpp:
        * tests/transport/simple_bp_rm/SimpleDataWriter.h:

          Fixed access violation from missing allocator.

Fri Dec 30 13:54:44 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * bin/dcps_tests.lst:

          Removed duplicate BuiltInTopic line.

Fri Dec 30 11:00:34 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * tests/DCPS/unit/Main.cpp:
        * tests/transport/dds_comparative/PubWriter.h:
        * tests/transport/simple/SimpleDataWriter.cpp:
        * tests/transport/simple_bp/SimpleDataWriter.cpp:
        * tests/transport/simple_bp_rm/SimpleDataWriter.cpp:
        * tests/transport/simple_n/SimpleDataWriter.cpp:
        * tests/transport/udp_simple/SimpleDataWriter.cpp:
        * tests/transport/udp_simple_n/SimpleDataWriter.cpp:

          Fixed scoping of variables added for transport allocators.

Thu Dec 29 16:31:52 MST 2005  Trevor Fields  <fields_t@ociweb.com>

        * dds/DCPS/DataSampleList.h:

          Force the creation of a DataSampleListElement to give
          the allocator.

        * tests/DCPS/unit/Main.cpp:
        * tests/transport/dds_comparative/PubWriter.cpp:
        * tests/transport/dds_comparative/PubWriter.h:
        * tests/transport/simple_bp_rm/SimpleDataWriter.cpp:

          Added missing transport allocators.


Tue Dec 27 12:26:47 2005  Paul Calabrese  <calabrese_p@ociweb.com>

        * dds/DCPS/transport/framework/TransportSendStrategy.inl:
        * performance-tests/DCPS/SimpleLatency/PubListener.cpp:
        * performance-tests/DCPS/TCPListenerTest/DataReaderListener.cpp:
        * performance-tests/DCPS/UDPListenerTest/DataReaderListener.cpp:

          Fix some GCC 3.4.2 warnings (ununsed vars and member
          initialization order).  Avoided commenting out random code.

Mon Dec 19 14:42:52 USMST 2005  Yan Dai  <dai_y@ociweb.com>
